--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header p {
 
 /* inizio parte prodotti coppia */
 .prodotti{
-  padding:10px; 
+  padding:10px;
 }
 main .prodotti img {
   height: 400px;
@@ -84,5 +84,63 @@ main .prodotti img {
 @media screen and (min-width:768px) and (max-width: 992px){
   main .prodotti img {
     height: 270px;
+  }
+}
+
+
+.panchine {
+  background-image: url(./img/scooter-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+  position: relative;
+  width: 100%;
+}
+.panchine .testo1 {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+}
+.testo1 a {
+  color: white;
+  text-decoration: none;
+  margin-top: 20px;
+}
+.testo1 p{
+  margin: 20px;
+}
+.testo1 h4{
+  font-size: 40px;
+}
+
+/* per versione smartphone */
+@media screen and (max-width: 769px) {
+  .panchine {
+    background-image: url(./img/scooter-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    position: relative;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .panchine .testo1 {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 84%;
+    transform: translate(-50%, -50%);
+  }
+  .testo1 a {
+    color: white;
+    text-decoration: none;
+  }
+  .testo1 p {
+    margin: 20px;
+  }
+  .testo1 h4{
+    font-size: 20px;
   }
 }
